comments and vis

--- a/project06/poisson_petsc/vis_graph.ipynb
+++ b/project06/poisson_petsc/vis_graph.ipynb
@@ -2,37 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Courses/Spring2024/HPC_Lab/project06/poisson_petsc/Poisson`\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Keys: Vec_0x13d03a0_0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import Pkg\n",
-    "Pkg.activate(\"Poisson\")\n",
-    "\n",
+    "Pkg.activate(\"Poisson\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "using HDF5\n",
-    "using Plots\n",
-    "\n",
+    "using Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Open the HDF5 file\n",
     "h5file = h5open(\"solution.h5\", \"r\")\n",
     "\n",
     "key = keys(h5file)[1]\n",
-    "println(\"Keys: \", key)\n",
-    "\n",
+    "println(\"Keys: \", key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read the vector data\n",
     "u = read(h5file, key)\n",
     "\n",
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,27 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"/Users/carla/Documents/Courses/Spring2024/HPC_Lab/project06/poisson_petsc/surface_plot.pdf\""
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "savefig(plot_, \"surface_plot.pdf\")  # Saves the plot as a PDF file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
